# keyboard-lock-osd

./: AGENTS.md  CLAUDE.md  README.en.md  README.md  README.zh-CN.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
scripts/: release.ps1  vite-dev.cjs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/windows/: hooks.nsh
